client/src/App.css
body{
    font-family: 'Raleway', sans-serif;
    color: black;
    padding-bottom: 5%;
}

button{
    background-color: #dd8585 !important; 
}
button:hover{
    background-color: #c97979 !important;
}
.delete-btn{
    background-color: #b56d6d !important; 
}
.delete-btn:hover{
    background-color: #a16161 !important; 
}
.edit-btn{
    background-color: #628395 !important; 
}
.edit-btn:hover{
    background-color: #8ca4b1 !important; 
}

hr{
    color: white;
}

h1 h2 h3 h4 h5 h6{
    color: black;
}

h6{
    font-weight: bold;
}

.top-of-page{
    background: url('https://images.unsplash.com/photo-1457369804613-52c61a468e7d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjIxMTIzfQ&auto=format&fit=crop&w=1950&q=80') center;
    background-size: cover;
    padding-top: 5%;
}

.main-navbar{
    background-color: rgba(87, 79, 77, 0.6);
    overflow: hidden;
}

.navbar-content{
    text-align: center;
}

.navbar-content ul{
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.navbar-content li{
    float: left;
}
.navbar-content li:hover{
    background-color: rgba(87, 79, 77, 0.7);
}

.navbar-content li a{
    display: block;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    color: white;
    font-weight: bold;
}

.right-navitem{
    float:right;
}

.sign-out-nav{
    color: red;
}

.logo-container{
    padding-bottom: 2%;
}

.small-title {
    text-align: left;
}
.c-text{
    text-align: left;
    color: gray;
}
.author-div{
    float:left;
    margin-right: 5%;
}
.lang-div{
    overflow:hidden;
}
.lang-div p {
    text-align: right;
}

.title-big{
    color: #eff9f0;
    font-family: 'Eczar', serif;
    font-size: 55px;
}

.title-link{ /* for a elements that should look like text, but with hover color */
    color: black;
}
.title-link:hover{
    color: #c97979;
}
p{
    color: black;

}

.chapterList{
    color:black;
}
.chapterList:hover{
    color:#c97979;
}

.card-size{
    height: 400px;
    width: auto;
    overflow: hidden;
}

.book-card-container{
    display: grid;
    gap: 1rem; /*change*/
    grid-template-columns: repeat(auto-fit, minmax(200px,1fr)); /* repeat minmax autofill to max 4? */
}

.book-card{
    box-shadow: 0 3px rgba(87, 79, 77, 0.3);
    border-radius: 10px;
    background-color: rgba(87, 79, 77, 0.05);
    overflow: hidden;
}

.book-card div{
    padding: 0 5% 0 5%;
}

.book-card img{
    max-width: 100%;
}

.btn-container{
    margin-bottom: 5%;
}

.cb-container{
    margin: 0 auto;
    max-width: 1280px;
    width: 50%;
}

/*quill: */
.ql-editor{
    min-height:500px;
}



@media (min-width: 768px){ /*fix this later so they r one below the other*/
    .author-div{
        margin-bottom: 5%;
    }
}

